# bitbox02-firmware

./: .gitmodules  CMakeLists.txt  Makefile
messages/: bitboxbase.options  bitboxbase.proto  common.proto  hww.proto
py/: load_firmware.py  send_message.py
py/bitbox02/bitbox02/: bitbox02.py  bootloader.py
py/bitbox02/bitbox02/bitbox02/: bitbox02.py
py/bitbox02/bitboxbase/: __init__.py  bitboxbase.py
py/bitbox02/communication/: __init__.py  bitbox_api_protocol.py  communication.py
py/bitbox02/communication/u2fhid/: u2fhid.py
py/bitbox02/communication/usart/: __init__.py  usart.py
py/bitbox02/communication/usart/usart/: usart.py
py/bitbox02/usart/: usart.py
py/u2f/: bitbox02.py
src/: CMakeLists.txt  common_main.c  firmware_main_loop.c  hww.c  hww.h  memory.c  queue.c  stack_guard.c  u2f.c  u2f.h  util.c  util.h
src/apps/btc/: confirm_locktime_rbf.c
src/bitboxbase/: bitboxbase.c  bitboxbase_background.c
src/bootloader/: bootloader.c  bootloader_graphics.c  bootloader_graphics.h  startup.c
src/commander/: commander.c  commander.h  commander_bitboxbase.c  commander_btc.c  commander_states.c  commander_timeout.c  commander_timeout.h
src/commander/api/: api_state.c  api_state.h  btc_pub.c  btc_pub.h  set_device_name.c  set_device_name.h
src/fido2/: crypto.c  ctap.c  ctap.h  ctap_logging.h  ctap_parse.c  ctap_parse.h  device.c  device.h  fido2_u2f.c  fido2_u2f.h
src/memory/: memory.c
src/platform/: driver_init.h
src/platform/bitboxbase/: leds.c  leds.h
src/rust/bitbox02-rust/: Cargo.toml
src/rust/bitbox02-rust/src/: lib.rs  util.rs
src/rust/bitbox02-rust/src/platform/: bitboxbase.rs
src/rust/bitbox02-rust/src/platform/bitboxbase/: config.rs  display.rs  status.rs  workflow.rs
src/rust/bitbox02-sys/: build.rs  wrapper.h
src/rust/bitbox02/src/: lib.rs
src/securechip/: securechip.c
src/touch/: gestures.c  gestures.h
src/u2f/: u2f_app.c  u2f_app.h  u2f_keyhandle.c  u2f_packet.c  u2f_packet.h
src/ui/: component.h  screen_process.c  workflow_stack.c  workflow_stack.h
src/ui/components/: confirm.c  confirm.h  label.c
src/usart/: usart_frame.c  usart_frame.h  usart_hww.c
src/usb/: noise.c  usb.c  usb_frame.c  usb_frame.h  usb_packet.c  usb_packet.h  usb_processing.c  usb_processing.h
src/usb/u2f/: u2f.h  u2f_hid.h
src/workflow/: backup.c  cancel.c  confirm.c  confirm.h  confirm_time.c  get_mnemonic_passphrase.c  get_mnemonic_passphrase.h  idle_workflow.c  orientation_screen.c  pairing.c  password.c  reboot.c  reset.c  restore_from_mnemonic.c  select_ctap_credential.c  show_mnemonic.c  unlock.c  unlock_bip39.c  verify_pub.c  workflow.c  workflow.h
src/workflow/impl/: confirm_impl.c  confirm_impl.h
test/: CMakeLists.txt
test/common/: CMakeLists.txt
test/demo/: CMakeLists.txt
test/demo/src/: hsm_led_show.c
test/device-test/: CMakeLists.txt
test/device-test/src/: test_all_variants_menu.c  test_confirm_bip39.c  test_mpu.c  test_scroll_menu_2.c
test/unit-test/: CMakeLists.txt  test_app_btc_confirm_locktime_rbf.c  test_commander_set_device_name.c  test_commander_set_mnemonic_passphrase_enabled.c  test_ui_components.c  test_workflow_blocking.c  test_workflow_cancel.c
test/unit-test/framework/: mock_hidapi.c
test/unit-test/framework/workflow/impl/: confirm_impl.c
